admin_tool/tests/002.php
<?php
$ret = admin_tool_test1();

var_dump($ret);
?>
